--- a/RL_HW1.ipynb
+++ b/RL_HW1.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "## Advanced DL and RL: Домашнее задание 1\n",
     "\n",
-    "Студент: <mark>Панфилов Александр</mark>\n",
+    "Студент: **Панфилов Александр**\n",
     "\n",
-    "Группа: <mark>MADE-DS-32</mark>\n",
+    "Группа: **MADE-DS-32**\n",
     "\n",
     "### Часть первая, с блекджеком и стратегиями\n",
     "Мы будем обучаться играть в очень простую, но всё-таки знаменитую и популярную игру: блекджек. \n",
