--- a/RL_HW2.ipynb
+++ b/RL_HW2.ipynb
@@ -167,27 +167,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2],\n",
-       "       [3, 3]], dtype=int64)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "env.getEmptySpaces()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -536,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,45 +526,44 @@
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
     "\n",
-    "from collections import namedtuple"
+    "from collections import namedtuple\n",
+    "from itertools import count\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Сеть предскзаывает, в какую клетку сходить \n",
     "class DQN(nn.Module):\n",
+    "    def calculate_lin_size(self):\n",
+    "        size = self.conv3(self.conv2(self.conv1(torch.rand(1, 1, 3, 3)))).size()\n",
+    "        m = 1\n",
+    "        for i in size:\n",
+    "            m *= i\n",
+    "        return int(m) \n",
+    "    \n",
     "    def __init__(self, h, w):\n",
     "        super(DQN, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(1, 16, kernel_size=5, stride=2)\n",
-    "        self.bn1 = nn.BatchNorm2d(16)\n",
-    "        self.conv2 = nn.Conv2d(16, 32, kernel_size=5, stride=2)\n",
-    "        self.bn2 = nn.BatchNorm2d(32)\n",
-    "        self.conv3 = nn.Conv2d(32, 32, kernel_size=5, stride=2)\n",
-    "        self.bn3 = nn.BatchNorm2d(32)\n",
-    "\n",
-    "        def conv2d_size_out(size, kernel_size = 5, stride = 2):\n",
-    "            return (size - (kernel_size - 1) - 1) // stride  + 1\n",
-    "        \n",
-    "        convw = conv2d_size_out(conv2d_size_out(conv2d_size_out(w)))\n",
-    "        convh = conv2d_size_out(conv2d_size_out(conv2d_size_out(h)))\n",
-    "        \n",
-    "        linear_input_size = convw * convh * 32\n",
-    "        \n",
-    "        self.head = nn.Linear(linear_input_size, h*w)\n",
+    "        self.conv1 = nn.Conv2d(1, 16, padding=2, kernel_size=2)\n",
+    "        self.conv2 = nn.Conv2d(16, 32, padding=1, kernel_size=2)\n",
+    "        self.conv3 = nn.Conv2d(32, 32, padding=1, kernel_size=2)  \n",
+    "        lin_sz = self.calculate_lin_size()\n",
+    "        self.head = nn.Linear(lin_sz, h*w)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = F.relu(self.bn1(self.conv1(x)))\n",
-    "        x = F.relu(self.bn2(self.conv2(x)))\n",
-    "        x = F.relu(self.bn3(self.conv3(x)))\n",
+    "        x = F.relu(self.conv1(x))\n",
+    "        x = F.relu(self.conv2(x))\n",
+    "        x = F.relu(self.conv3(x))\n",
     "        return self.head(x.view(x.size(0), -1))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +602,9 @@
     "EPS = 0.3\n",
     "TARGET_UPDATE = 10\n",
     "\n",
-    "desk_sz = 3\n",
+    "desk_size = 3\n",
+    "env = TicTacToe(desk_sz, desk_sz, desk_sz)\n",
+    "\n",
     "policy_net = DQN(desk_sz, desk_sz).to(device)\n",
     "target_net = DQN(desk_sz, desk_sz).to(device)\n",
     "target_net.load_state_dict(policy_net.state_dict())\n",
@@ -634,25 +614,25 @@
     "memory = ReplayMemory(10000)\n",
     "\n",
     "\n",
-    "\n",
-    "def select_action(state):\n",
-    "    sample = random.random()\n",
+    "def select_action(state, empty_spaces):\n",
+    "    sample = np.random.random()\n",
     "    if sample > EPS:\n",
     "        with torch.no_grad():\n",
-    "            # t.max(1) will return largest column value of each row.\n",
-    "            # second column on max result is index of where max element was\n",
-    "            # found, so we pick action with the larger expected reward.\n",
-    "            return policy_net(state).max(1)[1].view(1, 1)\n",
+    "            for action in np.argsort(policy_net(state).cpu().detach().numpy())[0][::-1]:\n",
+    "                row = action // desk_size\n",
+    "                col = action - row*desk_size\n",
+    "                move = (row, col)\n",
+    "                if move in empty_spaces:\n",
+    "                    return move\n",
     "    else:\n",
-    "        return torch.tensor([[random.randrange(desk_sz*desk_sz)]], device=device, dtype=torch.long)\n",
-    "\n",
-    "\n",
-    "episode_durations = []\n"
+    "        move = empty_spaces[np.random.randint(len(empty_spaces))]\n",
+    "        return move\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,16 +645,15 @@
     "    non_final_mask = torch.tensor(tuple(map(lambda s: s is not None,\n",
     "                                          batch.next_state)), device=device, dtype=torch.bool)\n",
     "    non_final_next_states = torch.cat([s for s in batch.next_state\n",
-    "                                                if s is not None])\n",
+    "                                         if s is not None])\n",
     "    state_batch = torch.cat(batch.state)\n",
-    "    action_batch = torch.cat(batch.action)\n",
+    "    action_batch = torch.cat([torch.Tensor([i]) for i in batch.action])\n",
     "    reward_batch = torch.cat(batch.reward)\n",
     "\n",
     "    state_action_values = policy_net(state_batch).gather(1, action_batch)\n",
     "\n",
     "    next_state_values = torch.zeros(BATCH_SIZE, device=device)\n",
     "    next_state_values[non_final_mask] = target_net(non_final_next_states).max(1)[0].detach()\n",
-    "\n",
     "    expected_state_action_values = (next_state_values * GAMMA) + reward_batch\n",
     "\n",
     "    # Compute Huber loss\n",
@@ -690,9 +669,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "expected Tensor as element 0 in argument 0, but got int",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-197-4f864cdf4d55>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m         \u001b[1;31m# Perform one step of the optimization (on the target network)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 35\u001b[1;33m         \u001b[0moptimize_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     36\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m     \u001b[1;31m# Update the target network, copying all weights and biases in DQN\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-195-053c7f7e675c>\u001b[0m in \u001b[0;36moptimize_model\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mstate_batch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[0maction_batch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mbatch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maction\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[0mreward_batch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreward\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mstate_action_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpolicy_net\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate_batch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgather\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maction_batch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: expected Tensor as element 0 in argument 0, but got int"
+     ]
+    }
+   ],
    "source": [
     "num_episodes = 50\n",
     "for i_episode in range(num_episodes):\n",
@@ -700,40 +692,57 @@
     "    env.reset()\n",
     "    s, empty_spaces, a = env.getState()\n",
     "    \n",
-    "    state = torch.Tensor(env.board).to(device)\n",
-    "    for t in count():\n",
+    "    state = torch.Tensor(env.board).to(device).unsqueeze(0).unsqueeze(0)\n",
+    "    done = False\n",
+    "    while not done:\n",
     "        # Select and perform an action\n",
-    "        action = select_action(state).item()\n",
+    "        action = select_action(state, empty_spaces)\n",
+    "    \n",
+    "        state_tuple_new, reward, done_d, _ = env.step(action)\n",
+    "        if not done_d:\n",
+    "            _, empty_spaces, _ = state_tuple_new\n",
+    "            move = empty_spaces[np.random.randint(len(empty_spaces))]\n",
+    "            state_tuple_new, enemy_reward, done, _ = env.step(move)\n",
+    "            _, empty_spaces, _ = state_tuple_new\n",
+    "            if enemy_reward == -1:\n",
+    "                reward = -1\n",
+    "            reward = torch.tensor([reward], device=device)\n",
     "        \n",
-    "        row = action // desk_size\n",
-    "        col = action - row*desk_size\n",
-    "        _, reward, done, _ = env.step((row, col))\n",
-    "        reward = torch.tensor([reward], device=device)\n",
     "\n",
-    "        # Observe new state\n",
-    "        last_screen = current_screen\n",
-    "        current_screen = get_screen()\n",
     "        if not done:\n",
-    "            next_state = current_screen - last_screen\n",
+    "            next_state = torch.Tensor(env.board).to(device).unsqueeze(0).unsqueeze(0)\n",
     "        else:\n",
     "            next_state = None\n",
-    "\n",
     "        # Store the transition in memory\n",
-    "        memory.push(state, action, next_state, reward)\n",
+    "        memory.push(state, (action[0]*desk_size + action[1]), next_state, reward)\n",
     "\n",
     "        # Move to the next state\n",
     "        state = next_state\n",
     "\n",
     "        # Perform one step of the optimization (on the target network)\n",
     "        optimize_model()\n",
-    "        if done:\n",
-    "            episode_durations.append(t + 1)\n",
-    "            plot_durations()\n",
-    "            break\n",
+    "       \n",
     "    # Update the target network, copying all weights and biases in DQN\n",
     "    if i_episode % TARGET_UPDATE == 0:\n",
     "        target_net.load_state_dict(policy_net.state_dict())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Выводы:\n",
+    "\n",
+    "1. В пункте 1 и 2 стратегии крестиков со временем улучшаются, а для улучшения игры за нолики нужно побольше времени\n",
+    "2. Не садится за такую домашку в выходные перед делайном. Баг с ReplayMemory победить не получилось (дедлайн через 15 мин)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
